# go/api/model_log_response.go
@@ -1,0 +1,22 @@
+/*
+ * k8l
+ *
+ * Kubernetes light logs API
+ *
+ * API version: 1.0
+ * Contact: mogui83@gmail.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+
+type LogResponse struct {
+
+	Draw int32 `json:"draw,omitempty"`
+
+	RecordsTotal int32 `json:"recordsTotal,omitempty"`
+
+	RecordsFiltered int32 `json:"recordsFiltered,omitempty"`
+
+	Data []LogEntry `json:"data,omitempty"`
+}
